fix homepage grid, remove broken embeds on mobile

--- a/src/styles/_weather.scss
+++ b/src/styles/_weather.scss
@@ -12,7 +12,7 @@
             * {
                 text-align: center;
                 color: white;
-                text-shadow: 0px 1px 4px rgba(0, 0, 0, 0.15);
+                text-shadow: 2px 2px 2px black;
             }
         
             > div {
